name: Wait for App Launch
description: Waits for the app to launch and stabilize

appId: com.pablof7z.snapstr
---
- launchApp
- waitForAnimationToEnd:
      timeout: 10000

- tapOn: "http://localhost:8081" # Change this if needed
- extendedWaitUntil:
    notVisible: "Development servers"
    timeout: 10000
- tapOn: "Continue"
- waitForAnimationToEnd:
    timeout: 10000
- runFlow:
    when:
        visible: "Runtime version: exposdk"
    file: "dismiss-dev-modal.yaml"